--- a/page1.html
+++ b/page1.html
@@ -13,7 +13,7 @@
             <p1>Artigo 1: contexto historico </p1><br>  
             <input id="search" autocapitalize="none" autocomplete="off" autocorrect="off" name="search_query" tabindex="0" type="text" spellcheck="false" placeholder="Pesquisar" aria-label="Pesquisar" role="combobox" aria-haspopup="false" aria-autocomplete="list" class="gsfi ytd-searchbox" dir="ltr" >
 
-            <img src="imagens/search-interface-symbol.png" width="30" height="30" id="lupa">
+            <button onclick="pesquisarArtigo()"> <img  src="imagens/search-interface-symbol.png" width="30" height="30" id="lupa"> </button>
             
         </div>
         <script>
