--- a/page1.html
+++ b/page1.html
@@ -4,7 +4,7 @@
     <link rel="stylesheet" type="text/css" href="styles1.css" media="screen">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Trilhas Historicas</title>
 </head>
 <body>
     <div id="cabecalho">
